fix: prevent environment worker name conflicts
- Add unique names for each environment to prevent overwriting:
  - Development: coralogix-tail-worker-dev
  - Staging: coralogix-tail-worker-staging
  - Production: coralogix-tail-worker-production
- Update README.md with correct worker names for each environment
- Fix critical issue where all environments were using same worker name

Thanks to Stefan Guggisberg for catching this important configuration bug!

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "coralogix-tail-worker"
+name = "coralogix-tail-worker-dev"
 main = "src/index.js"
 compatibility_date = "2023-12-01"
 
@@ -10,6 +10,7 @@ SUBSYSTEM_NAME = "unknown-worker"
 
 # Production environment
 [env.production]
+name = "coralogix-tail-worker-production"
 [env.production.vars]
 ENVIRONMENT = "production"
 CORALOGIX_ENDPOINT = "https://ingress.eu1.coralogix.com/logs/v1/singles"
@@ -18,6 +19,7 @@ SUBSYSTEM_NAME = "unknown-worker"
 
 # Staging environment
 [env.staging]
+name = "coralogix-tail-worker-staging"
 [env.staging.vars]
 ENVIRONMENT = "staging"
 CORALOGIX_ENDPOINT = "https://ingress.eu1.coralogix.com/logs/v1/singles"
