fix: improve GitHub Actions deployment configuration
- Exclude 'develop' branch from auto-deployment (reserved for local development)
- Use single shared CORALOGIX_API_KEY instead of separate keys per environment
- Update README.md to reflect simplified secret management
- Add clear deployment behavior table showing which branches auto-deploy
- Clarify that develop branch is for local development only

This prevents accidental deployments from the develop branch and
simplifies secret management by using one Coralogix API key across environments.

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,9 @@ name: Deploy Coralogix Tail Worker
 
 on:
   push:
-    branches: ['**']  # Deploy on all branch pushes
+    branches:
+      - '**'  # Deploy on all branch pushes
+      - '!develop'  # Exclude develop branch (reserved for local development)
   pull_request:
     branches: [main]
     types: [closed]
@@ -75,19 +77,14 @@ jobs:
           apiToken: ${{ matrix.token }}
           wranglerVersion: '3.114.15'
 
-      - name: Set Coralogix API Key for Production
-        if: needs.prepare-matrix.outputs.environment == 'production'
+      - name: Set Coralogix API Key
         run: |
-          echo "Setting Coralogix API key for production..."
-          wrangler secret put CORALOGIX_API_KEY --env production <<< "${{ secrets.CORALOGIX_API_KEY_PRODUCTION }}"
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ matrix.token }}
-
-      - name: Set Coralogix API Key for Staging
-        if: needs.prepare-matrix.outputs.environment == 'staging'
-        run: |
-          echo "Setting Coralogix API key for staging..."
-          wrangler secret put CORALOGIX_API_KEY --env staging <<< "${{ secrets.CORALOGIX_API_KEY_STAGING }}"
+          echo "Setting shared Coralogix API key..."
+          if [[ "${{ needs.prepare-matrix.outputs.environment }}" == "production" ]]; then
+            wrangler secret put CORALOGIX_API_KEY --env production <<< "${{ secrets.CORALOGIX_API_KEY }}"
+          else
+            wrangler secret put CORALOGIX_API_KEY --env staging <<< "${{ secrets.CORALOGIX_API_KEY }}"
+          fi
         env:
           CLOUDFLARE_API_TOKEN: ${{ matrix.token }}
 
