fix: skip secret management due to insufficient API token permissions
- Skip wrangler secret put command that was failing with authentication error
- API token has read permissions (wrangler whoami works) but lacks write permissions for secrets
- Add documentation about manual secret setup requirement
- Focus on getting deployment working first, secrets can be set manually

The token permissions are sufficient for deployment but not for secret management.
Users need to set CORALOGIX_API_KEY manually using wrangler CLI.

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -135,12 +135,8 @@ jobs:
 
       - name: Set Coralogix API Key
         run: |
-          echo "Setting shared Coralogix API key..."
-          if [[ "${{ needs.prepare-matrix.outputs.environment }}" == "production" ]]; then
-            wrangler secret put CORALOGIX_API_KEY --env production <<< "${{ secrets.CORALOGIX_API_KEY }}"
-          else
-            wrangler secret put CORALOGIX_API_KEY --env staging <<< "${{ secrets.CORALOGIX_API_KEY }}"
-          fi
+          echo "⚠️  Skipping secret management - requires additional API token permissions"
+          echo "Please set CORALOGIX_API_KEY manually using: wrangler secret put CORALOGIX_API_KEY --env production"
         env:
           CLOUDFLARE_API_TOKEN: ${{ steps.get-token.outputs.token }}
 
