fix: upgrade to latest wrangler version to resolve authentication issues
- Update from wrangler@3.114.15 to wrangler@latest (4.52.1+)
- Older wrangler version was making /memberships API calls that require additional permissions
- Local testing with wrangler 4.14.4 works fine, CI with 3.114.15 fails
- Latest version should align CI behavior with local development environment

This should resolve the 'Unable to authenticate request [code: 10001]' error in GitHub Actions.

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,7 +124,7 @@ jobs:
           EOF
 
       - name: Install Wrangler
-        run: npm install -g wrangler@3.114.15
+        run: npm install -g wrangler@latest
 
       - name: Verify Wrangler Authentication
         run: |
