fix: resolve GitHub Actions output format error in account ID extraction
- Add head -1 to ensure only one account ID is extracted
- Quote GITHUB_OUTPUT variable to prevent parsing issues
- This should resolve the 'Invalid format' error in GitHub Actions

The account ID extraction was working but GitHub Actions was having trouble parsing the output format.

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -134,14 +134,14 @@ jobs:
           echo "$WHOAMI_OUTPUT"
 
           # Extract account ID from whoami output (32-character hex string)
-          ACCOUNT_ID=$(echo "$WHOAMI_OUTPUT" | grep -o '[a-f0-9]\{32\}')
+          ACCOUNT_ID=$(echo "$WHOAMI_OUTPUT" | grep -o '[a-f0-9]\{32\}' | head -1)
           if [ -z "$ACCOUNT_ID" ]; then
             echo "❌ Could not extract Account ID from wrangler whoami output"
             exit 1
           fi
 
           echo "✅ Extracted Account ID: $ACCOUNT_ID"
-          echo "account_id=$ACCOUNT_ID" >> $GITHUB_OUTPUT
+          echo "account_id=$ACCOUNT_ID" >> "$GITHUB_OUTPUT"
         env:
           CLOUDFLARE_API_TOKEN: ${{ steps.get-token.outputs.token }}
 
